@@ -117,12 +117,6 @@ RELEASE SHOWSTOPPERS:
 PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
   [ start all new proposals below, under PATCHES PROPOSED. ]
 
-  *) mod_reqtimeout: Fix body timeout disabling for CONNECT requests to avoid
-     triggering mod_proxy_connect's AH01018 once the tunnel is established.
-     trunk patch: http://svn.apache.org/r1754391
-                  http://svn.apache.org/r1754399
-     2.4.x patch: trunk works (module CHANGES)
-     +1: ylavic, rpluem, jim
 
 PATCHES PROPOSED TO BACKPORT FROM TRUNK:
   [ New proposals should be added at the end of the list ]
